otro intento fallido

--- a/Views/Home/Details.cshtml
+++ b/Views/Home/Details.cshtml
@@ -1,14 +1,15 @@
-﻿@model YuGiOhCards.Models.YuGiOhCard
+﻿@model YuGiOhCards.Services.CardDetails
 
-<h2>@Model.Name</h2>
+@{
+    ViewData["Title"] = "Detalles de la carta";
+}
 
-<div>
-    @foreach (var image in Model.CardImages)
-    {
-        <img src="@image.ImageUrl" alt="@Model.Name" class="img-thumbnail">
-    }
-</div>
+<h1>@Model.Name</h1>
+<img src="@Model.ImageUrl" alt="@Model.Name" />
+<p>@Model.Description</p>
 
-<p>Precio en CardMarket: $@Model.CardPrices[0].CardMarketPrice</p>
-
-<a href="@Url.Action("Index", "YuGiOh")" class="btn btn-secondary">Volver</a>
+<h2>Imágenes adicionales:</h2>
+@foreach (var image in Model.Images)
+{
+    <img src="@image" alt="Imagen adicional" />
+}
